add the OPA on the admin without readme
